Add Create Project 03_03 Floor, Add Create Project 03_04 Roof

--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -137,6 +137,8 @@
     <Content Include="CreateProj_02_Home.aspx" />
     <Content Include="CreateProj_03_01_Footing.aspx" />
     <Content Include="CreateProj_03_02_Beam.aspx" />
+    <Content Include="CreateProj_03_03_Floor.aspx" />
+    <Content Include="CreateProj_03_04_Roof.aspx" />
     <Content Include="css\inputmask.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
@@ -155,6 +157,11 @@
     <Content Include="Images\01Footing\f3.png" />
     <Content Include="Images\01Footing\f4.png" />
     <Content Include="Images\01Footing\f5.png" />
+    <Content Include="Images\02Beam\b1.png" />
+    <Content Include="Images\02Beam\b2.png" />
+    <Content Include="Images\02Beam\b3.png" />
+    <Content Include="Images\02Beam\b4.png" />
+    <Content Include="Images\02Beam\b5.png" />
     <Content Include="Images\thai_gov.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -450,6 +457,20 @@
     </Compile>
     <Compile Include="CreateProj_03_02_Beam.aspx.designer.cs">
       <DependentUpon>CreateProj_03_02_Beam.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CreateProj_03_03_Floor.aspx.cs">
+      <DependentUpon>CreateProj_03_03_Floor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CreateProj_03_03_Floor.aspx.designer.cs">
+      <DependentUpon>CreateProj_03_03_Floor.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CreateProj_03_04_Roof.aspx.cs">
+      <DependentUpon>CreateProj_03_04_Roof.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CreateProj_03_04_Roof.aspx.designer.cs">
+      <DependentUpon>CreateProj_03_04_Roof.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
