--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -443,6 +443,7 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Test.aspx" />
+    <Content Include="TestHTMLtoPDF.aspx" />
     <Content Include="theme\js\contactform.js" />
     <Content Include="theme\css\bootstrap.min.css" />
     <Content Include="theme\css\font-awesome.min.css" />
@@ -651,6 +652,13 @@
     </Compile>
     <Compile Include="Test.aspx.designer.cs">
       <DependentUpon>Test.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TestHTMLtoPDF.aspx.cs">
+      <DependentUpon>TestHTMLtoPDF.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TestHTMLtoPDF.aspx.designer.cs">
+      <DependentUpon>TestHTMLtoPDF.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
