--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -139,6 +139,11 @@
     <Content Include="CreateProject_03_01.aspx" />
     <Content Include="CreateProject_03_02.aspx" />
     <Content Include="CreateProject_03_03.aspx" />
+    <Content Include="CreateProject_03_04.aspx" />
+    <Content Include="CreateProject_03_05.aspx" />
+    <Content Include="CreateProject_03_06.aspx" />
+    <Content Include="CreateProject_03_07.aspx" />
+    <Content Include="CreateProject_03_08.aspx" />
     <Content Include="CreateProj_01_Desc.aspx" />
     <Content Include="CreateProj_02_Home.aspx" />
     <Content Include="CreateProj_03_01_Footing.aspx" />
@@ -536,6 +541,41 @@
     </Compile>
     <Compile Include="CreateProject_03_03.aspx.designer.cs">
       <DependentUpon>CreateProject_03_03.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CreateProject_03_04.aspx.cs">
+      <DependentUpon>CreateProject_03_04.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CreateProject_03_04.aspx.designer.cs">
+      <DependentUpon>CreateProject_03_04.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CreateProject_03_05.aspx.cs">
+      <DependentUpon>CreateProject_03_05.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CreateProject_03_05.aspx.designer.cs">
+      <DependentUpon>CreateProject_03_05.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CreateProject_03_06.aspx.cs">
+      <DependentUpon>CreateProject_03_06.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CreateProject_03_06.aspx.designer.cs">
+      <DependentUpon>CreateProject_03_06.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CreateProject_03_07.aspx.cs">
+      <DependentUpon>CreateProject_03_07.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CreateProject_03_07.aspx.designer.cs">
+      <DependentUpon>CreateProject_03_07.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CreateProject_03_08.aspx.cs">
+      <DependentUpon>CreateProject_03_08.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CreateProject_03_08.aspx.designer.cs">
+      <DependentUpon>CreateProject_03_08.aspx</DependentUpon>
     </Compile>
     <Compile Include="CreateProj_01_Desc.aspx.cs">
       <DependentUpon>CreateProj_01_Desc.aspx</DependentUpon>
