Auto stash before merge of "master" and "origin/master"

--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -441,6 +441,7 @@
     <Content Include="lib\icheck\icheck.jquery.json" />
     <Content Include="HomeNestedMaster.master" />
     <Content Include="CreateHomeNestedMaster.master" />
+    <Content Include="js\init.validate.radio.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Profile.aspx" />
     <Content Include="Scripts\bootstrap.js" />
