--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -192,6 +192,7 @@
     <Content Include="Images\02Beam\b3.png" />
     <Content Include="Images\02Beam\b4.png" />
     <Content Include="Images\02Beam\b5.png" />
+    <Content Include="Images\03Floor\pic_floor.png" />
     <Content Include="Images\05Wall\w1.png" />
     <Content Include="Images\05Wall\w2.png" />
     <Content Include="Images\05Wall\w3.png" />
@@ -242,7 +243,7 @@
     <Content Include="Images\2Home\7.png" />
     <Content Include="Images\2Home\8.png" />
     <Content Include="Images\2Home\9.png" />
-    <Content Include="Images\logo.jpg" />
+    <Content Include="Images\logo.png" />
     <Content Include="Images\thai_gov.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -459,6 +460,7 @@
     <Content Include="js\init.validate.radio.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Profile.aspx" />
+    <Content Include="Project_Detail.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -822,6 +824,13 @@
     </Compile>
     <Compile Include="Profile.aspx.designer.cs">
       <DependentUpon>Profile.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Project_Detail.aspx.cs">
+      <DependentUpon>Project_Detail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Project_Detail.aspx.designer.cs">
+      <DependentUpon>Project_Detail.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.aspx.cs">
