--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -193,6 +193,9 @@
     <Content Include="Images\02Beam\b4.png" />
     <Content Include="Images\02Beam\b5.png" />
     <Content Include="Images\03Floor\pic_floor.png" />
+    <Content Include="Images\04Roof\m.png" />
+    <Content Include="Images\04Roof\s.png" />
+    <Content Include="Images\04Roof\v.png" />
     <Content Include="Images\05Wall\w1.png" />
     <Content Include="Images\05Wall\w2.png" />
     <Content Include="Images\05Wall\w3.png" />
