--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -150,6 +150,7 @@
     <Content Include="CreateProject_03_12.aspx" />
     <Content Include="CreateProject_03_13.aspx" />
     <Content Include="CreateProject_03_14.aspx" />
+    <Content Include="CreateProject_03_15.aspx" />
     <Content Include="CreateProj_01_Desc.aspx" />
     <Content Include="CreateProj_02_Home.aspx" />
     <Content Include="CreateProj_03_01_Footing.aspx" />
@@ -767,6 +768,13 @@
     </Compile>
     <Compile Include="CreateProject_03_14.aspx.designer.cs">
       <DependentUpon>CreateProject_03_14.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CreateProject_03_15.aspx.cs">
+      <DependentUpon>CreateProject_03_15.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CreateProject_03_15.aspx.designer.cs">
+      <DependentUpon>CreateProject_03_15.aspx</DependentUpon>
     </Compile>
     <Compile Include="CreateProj_01_Desc.aspx.cs">
       <DependentUpon>CreateProj_01_Desc.aspx</DependentUpon>
