--- a/BestBoQ/BestBoQ/BestBoQ.csproj
+++ b/BestBoQ/BestBoQ/BestBoQ.csproj
@@ -233,6 +233,7 @@
     <Content Include="Images\14WinDoor\win1_b.png" />
     <Content Include="Images\14WinDoor\win1_c.png" />
     <Content Include="Images\2Home\1.png" />
+    <Content Include="Images\2Home\10.jpg" />
     <Content Include="Images\2Home\10.png" />
     <Content Include="Images\2Home\11.png" />
     <Content Include="Images\2Home\12.png" />
@@ -244,8 +245,11 @@
     <Content Include="Images\2Home\4.png" />
     <Content Include="Images\2Home\5.png" />
     <Content Include="Images\2Home\6.png" />
+    <Content Include="Images\2Home\7.jpg" />
     <Content Include="Images\2Home\7.png" />
+    <Content Include="Images\2Home\8.jpg" />
     <Content Include="Images\2Home\8.png" />
+    <Content Include="Images\2Home\9.jpg" />
     <Content Include="Images\2Home\9.png" />
     <Content Include="Images\logo.png" />
     <Content Include="Images\thai_gov.png">
