Add generate document

--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,31 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+/BestBoQ/BestBoQ/AppendixA.cs
+/BestBoQ/BestBoQ/About.aspx.designer.cs
+/BestBoQ/BestBoQ/About.aspx.cs
+/BestBoQ/BestBoQ/About.aspx
+/BestBoQ/BestBoQ/Contract.cs
+/BestBoQ/BestBoQ/Contact.aspx.designer.cs
+/BestBoQ/BestBoQ/Contact.aspx.cs
+/BestBoQ/BestBoQ/Contact.aspx
+/BestBoQ/BestBoQ/contract.html
+/BestBoQ/BestBoQ/Login.aspx.designer.cs
+/BestBoQ/BestBoQ/Login.aspx.cs
+/BestBoQ/BestBoQ/Login.aspx
+/BestBoQ/BestBoQ/PdfConvert.cs
+/BestBoQ/BestBoQ/Site.Mobile.Master.designer.cs
+/BestBoQ/BestBoQ/Site.Mobile.Master.cs
+/BestBoQ/BestBoQ/Site.Mobile.Master
+/BestBoQ/BestBoQ/Site.Master.designer.cs
+/BestBoQ/BestBoQ/Site.Master.cs
+/BestBoQ/BestBoQ/Site.Master
+/BestBoQ/BestBoQ/Register.aspx.designer.cs
+/BestBoQ/BestBoQ/Register.aspx.cs
+/BestBoQ/BestBoQ/Register.aspx
+/BestBoQ/BestBoQ/testgenpdf.aspx.cs
+/BestBoQ/BestBoQ/testgenpdf.aspx
+/BestBoQ/BestBoQ/ViewSwitcher.ascx.designer.cs
+/BestBoQ/BestBoQ/ViewSwitcher.ascx.cs
+/BestBoQ/BestBoQ/ViewSwitcher.ascx
+/BestBoQ/BestBoQ/testgenpdf.aspx.designer.cs
